// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeInput should render range labels 1`] = `
<div
  class="css-nw180v"
>
  <div
    class="css-m1gst5"
    mode="test"
  >
    <div
      class="css-m1gst5"
      mode="test"
    >
      <div
        class="css-1sjm8x1"
      >
        <div
          class="vue-slider vue-slider-ltr"
          style="padding: 10px 0px; width: auto; height: 4px;"
        >
          <div
            class="vue-slider-rail"
          >
            <div
              class="vue-slider-process"
              style="height: 100%; top: 0px; left: 0%; width: 100%; transition-property: width,left; transition-duration: 0.5s;"
            />
            <div
              aria-orientation="horizontal"
              aria-valuemax="50000"
              aria-valuemin="20000"
              aria-valuenow="20000"
              aria-valuetext="20000"
              class="vue-slider-dot"
              role="slider"
              style="width: 20px; height: 20px; transform: translate(-50%, -50%); top: 50%; left: 0%; transition: left 0.5s;"
              tabindex="0"
            >
              <div
                class="vue-slider-dot-handle"
              />
              <div
                class="vue-slider-dot-tooltip vue-slider-dot-tooltip-top vue-slider-dot-tooltip-show"
              >
                <div
                  class="vue-slider-dot-tooltip-inner vue-slider-dot-tooltip-inner-top"
                >
                  <span
                    class="vue-slider-dot-tooltip-text"
                  >
                    20000
                  </span>
                </div>
              </div>
            </div>
            <div
              aria-orientation="horizontal"
              aria-valuemax="50000"
              aria-valuemin="20000"
              aria-valuenow="50000"
              aria-valuetext="50000"
              class="vue-slider-dot"
              role="slider"
              style="width: 20px; height: 20px; transform: translate(-50%, -50%); top: 50%; left: 100%; transition: left 0.5s;"
              tabindex="0"
            >
              <div
                class="vue-slider-dot-handle"
              />
              <div
                class="vue-slider-dot-tooltip vue-slider-dot-tooltip-top vue-slider-dot-tooltip-show"
              >
                <div
                  class="vue-slider-dot-tooltip-inner vue-slider-dot-tooltip-inner-top"
                >
                  <span
                    class="vue-slider-dot-tooltip-text"
                  >
                    50000
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="label-container"
        >
          <label
            class="range-label-left"
          >
            2,000
          </label>
          <label
            class="range-label-right"
          >
            50,000
          </label>
        </div>
      </div>
    </div>
    <div
      class="css-kgsg89"
    >
      <div
        class="css-d2gq24"
        direction="column"
        flex="2"
      >
        <input
          aria-label="authors-start-input"
          class="css-1n1dm2c"
          min="20000"
          name="start"
          type="number"
          value="20000"
        />
      </div>
      <div
        alignitems="center"
        class="css-6c29fo"
        flex="1"
        justifycontent="center"
      >
        -
      </div>
      <div
        class="css-d2gq24"
        direction="column"
        flex="2"
      >
        <input
          aria-label="authors-end-input"
          class="css-1n1dm2c"
          max="50000"
          name="end"
          type="number"
          value="50000"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`RangeInput should render range with slider 1`] = `
<div
  class="css-nw180v"
>
  <div
    class="css-m1gst5"
    mode="test"
  >
    <div
      class="css-m1gst5"
      mode="test"
    >
      <div
        class="css-1sjm8x1"
      >
        <div
          class="vue-slider vue-slider-ltr"
          style="padding: 10px 0px; width: auto; height: 4px;"
        >
          <div
            class="vue-slider-rail"
          >
            <div
              class="vue-slider-process"
              style="height: 100%; top: 0px; left: 0%; width: 100%; transition-property: width,left; transition-duration: 0.5s;"
            />
            <div
              aria-orientation="horizontal"
              aria-valuemax="50000"
              aria-valuemin="30000"
              aria-valuenow="30000"
              aria-valuetext="30000"
              class="vue-slider-dot"
              role="slider"
              style="width: 20px; height: 20px; transform: translate(-50%, -50%); top: 50%; left: 0%; transition: left 0.5s;"
              tabindex="0"
            >
              <div
                class="vue-slider-dot-handle"
              />
              <div
                class="vue-slider-dot-tooltip vue-slider-dot-tooltip-top vue-slider-dot-tooltip-show"
              >
                <div
                  class="vue-slider-dot-tooltip-inner vue-slider-dot-tooltip-inner-top"
                >
                  <span
                    class="vue-slider-dot-tooltip-text"
                  >
                    30000
                  </span>
                </div>
              </div>
            </div>
            <div
              aria-orientation="horizontal"
              aria-valuemax="50000"
              aria-valuemin="30000"
              aria-valuenow="50000"
              aria-valuetext="50000"
              class="vue-slider-dot"
              role="slider"
              style="width: 20px; height: 20px; transform: translate(-50%, -50%); top: 50%; left: 100%; transition: left 0.5s;"
              tabindex="0"
            >
              <div
                class="vue-slider-dot-handle"
              />
              <div
                class="vue-slider-dot-tooltip vue-slider-dot-tooltip-top vue-slider-dot-tooltip-show"
              >
                <div
                  class="vue-slider-dot-tooltip-inner vue-slider-dot-tooltip-inner-top"
                >
                  <span
                    class="vue-slider-dot-tooltip-text"
                  >
                    50000
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-kgsg89"
    >
      <div
        class="css-d2gq24"
        direction="column"
        flex="2"
      >
        <input
          aria-label="authors-start-input"
          class="css-1n1dm2c"
          min="30000"
          name="start"
          type="number"
          value="30000"
        />
      </div>
      <div
        alignitems="center"
        class="css-6c29fo"
        flex="1"
        justifycontent="center"
      >
        -
      </div>
      <div
        class="css-d2gq24"
        direction="column"
        flex="2"
      >
        <input
          aria-label="authors-end-input"
          class="css-1n1dm2c"
          max="50000"
          name="end"
          type="number"
          value="50000"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`RangeInput should render title 1`] = `
<div
  class="css-nw180v"
>
  <div
    class="css-m1gst5"
    mode="test"
  >
    <div
      class="css-m1gst5"
      mode="test"
    >
      <h2
        class="css-dysiaa"
      >
        Test Title
      </h2>
      <div
        class="css-1sjm8x1"
      >
        <div
          class="vue-slider vue-slider-ltr"
          style="padding: 10px 0px; width: auto; height: 4px;"
        >
          <div
            class="vue-slider-rail"
          >
            <div
              class="vue-slider-process"
              style="height: 100%; top: 0px; left: 0%; width: 100%; transition-property: width,left; transition-duration: 0.5s;"
            />
            <div
              aria-orientation="horizontal"
              aria-valuemax="50000"
              aria-valuemin="30000"
              aria-valuenow="30000"
              aria-valuetext="30000"
              class="vue-slider-dot"
              role="slider"
              style="width: 20px; height: 20px; transform: translate(-50%, -50%); top: 50%; left: 0%; transition: left 0.5s;"
              tabindex="0"
            >
              <div
                class="vue-slider-dot-handle"
              />
              <div
                class="vue-slider-dot-tooltip vue-slider-dot-tooltip-top vue-slider-dot-tooltip-show"
              >
                <div
                  class="vue-slider-dot-tooltip-inner vue-slider-dot-tooltip-inner-top"
                >
                  <span
                    class="vue-slider-dot-tooltip-text"
                  >
                    30000
                  </span>
                </div>
              </div>
            </div>
            <div
              aria-orientation="horizontal"
              aria-valuemax="50000"
              aria-valuemin="30000"
              aria-valuenow="50000"
              aria-valuetext="50000"
              class="vue-slider-dot"
              role="slider"
              style="width: 20px; height: 20px; transform: translate(-50%, -50%); top: 50%; left: 100%; transition: left 0.5s;"
              tabindex="0"
            >
              <div
                class="vue-slider-dot-handle"
              />
              <div
                class="vue-slider-dot-tooltip vue-slider-dot-tooltip-top vue-slider-dot-tooltip-show"
              >
                <div
                  class="vue-slider-dot-tooltip-inner vue-slider-dot-tooltip-inner-top"
                >
                  <span
                    class="vue-slider-dot-tooltip-text"
                  >
                    50000
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-kgsg89"
    >
      <div
        class="css-d2gq24"
        direction="column"
        flex="2"
      >
        <input
          aria-label="authors-start-input"
          class="css-1n1dm2c"
          min="30000"
          name="start"
          type="number"
          value="30000"
        />
      </div>
      <div
        alignitems="center"
        class="css-6c29fo"
        flex="1"
        justifycontent="center"
      >
        -
      </div>
      <div
        class="css-d2gq24"
        direction="column"
        flex="2"
      >
        <input
          aria-label="authors-end-input"
          class="css-1n1dm2c"
          max="50000"
          name="end"
          type="number"
          value="50000"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`RangeInput should select default value 1`] = `
<div
  class="css-nw180v"
>
  <div
    class="css-m1gst5"
    mode="test"
  >
    <div
      class="css-m1gst5"
      mode="test"
    >
      <div
        class="css-1sjm8x1"
      >
        <div
          class="vue-slider vue-slider-ltr"
          style="padding: 10px 0px; width: auto; height: 4px;"
        >
          <div
            class="vue-slider-rail"
          >
            <div
              class="vue-slider-process"
              style="height: 100%; top: 0px; left: 8%; width: 52%; transition-property: width,left; transition-duration: 0.5s;"
            />
            <div
              aria-orientation="horizontal"
              aria-valuemax="5500"
              aria-valuemin="3000"
              aria-valuenow="3200"
              aria-valuetext="3200"
              class="vue-slider-dot"
              role="slider"
              style="width: 20px; height: 20px; transform: translate(-50%, -50%); top: 50%; left: 8%; transition: left 0.5s;"
              tabindex="0"
            >
              <div
                class="vue-slider-dot-handle"
              />
              <div
                class="vue-slider-dot-tooltip vue-slider-dot-tooltip-top vue-slider-dot-tooltip-show"
              >
                <div
                  class="vue-slider-dot-tooltip-inner vue-slider-dot-tooltip-inner-top"
                >
                  <span
                    class="vue-slider-dot-tooltip-text"
                  >
                    3200
                  </span>
                </div>
              </div>
            </div>
            <div
              aria-orientation="horizontal"
              aria-valuemax="5500"
              aria-valuemin="3000"
              aria-valuenow="4500"
              aria-valuetext="4500"
              class="vue-slider-dot"
              role="slider"
              style="width: 20px; height: 20px; transform: translate(-50%, -50%); top: 50%; left: 60%; transition: left 0.5s;"
              tabindex="0"
            >
              <div
                class="vue-slider-dot-handle"
              />
              <div
                class="vue-slider-dot-tooltip vue-slider-dot-tooltip-top vue-slider-dot-tooltip-show"
              >
                <div
                  class="vue-slider-dot-tooltip-inner vue-slider-dot-tooltip-inner-top"
                >
                  <span
                    class="vue-slider-dot-tooltip-text"
                  >
                    4500
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="label-container"
        >
          <label
            class="range-label-left"
          >
            3K
          </label>
          <label
            class="range-label-right"
          >
            5.5K
          </label>
        </div>
      </div>
    </div>
    <div
      class="css-kgsg89"
    >
      <div
        class="css-d2gq24"
        direction="column"
        flex="2"
      >
        <input
          aria-label="authors-start-input"
          class="css-1n1dm2c"
          min="3000"
          name="start"
          type="number"
          value="3200"
        />
      </div>
      <div
        alignitems="center"
        class="css-6c29fo"
        flex="1"
        justifycontent="center"
      >
        -
      </div>
      <div
        class="css-d2gq24"
        direction="column"
        flex="2"
      >
        <input
          aria-label="authors-end-input"
          class="css-1n1dm2c"
          max="5500"
          name="end"
          type="number"
          value="4500"
        />
      </div>
    </div>
  </div>
</div>
`;
